ai and hive changes